--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+}
+
 body {
     background: linear-gradient(to bottom right, rgb(0, 0, 0), rgb(2, 71, 2));
     color: white;
@@ -39,10 +46,11 @@ body {
     padding: 20px;
 }
 
+
 /* side menu */
 #sideleft {
     width: 20%;
-    height: 100%;
+    height: 80%;
     background: #ddd;
     padding: 20px;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
